--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#home">
-                <img src="images/homepage/hero/celestial-church-of-christ-logo-png-5.png" alt="CCC Logo" class="navbar-logo">
+                <img src="images/logo.jpg" alt="CCC Logo" class="navbar-logo">
                 CCC Glory of Latter Days Parish
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -853,7 +853,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h5><img src="images/homepage/hero/celestial-church-of-christ-logo-png-5.png" alt="CCC Logo" class="navbar-logo">
+                    <h5><img src="images/logo.jpg" alt="CCC Logo" class="navbar-logo">
                 CCC Glory of Latter Days Parish</h5>
                     <p>A place where faith, family, and community come together to worship, grow, and serve.</p>
                     <div class="social-links">
