--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         <div id="heroCarousel" class="hero-carousel carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/sundayservice/551932257_18020598362767677_7612704916317753514_n.jpg" alt="Sunday Service" class="d-block w-100">
+                    %<img src="images/sundayservice/551932257_18020598362767677_7612704916317753514_n.jpg" alt="Sunday Service" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
                     <img src="images/sundayservice/553255245_18020598371767677_2767495010855152047_n.jpg" alt="Sunday Service" class="d-block w-100">
@@ -618,7 +618,6 @@
         
         <!-- Hero Logo (clickable to home) -->
         <a href="#home" class="hero-logo">
-            <img src="images/homepage/hero/celestial-church-of-christ-logo-png-5.png" alt="CCC Logo">
         </a>
         
         <!-- Hero Content -->
