--- a/index.html
+++ b/index.html
@@ -872,14 +872,14 @@
                     <!-- Christmas event -->
                     <div class="event-item">
                         <div class="event-media mb-3">
-                            <img class="event-image" src="images/events/538359275_18016959650767677_2254471270723542986_n.jpg" alt="Christmas Carol Service">
+                            <img class="event-image" src="images/events/538359275_18016959650767677_2254471270723542986_n.jpg" alt="2025 Beach Party">
                         </div>
                         <div class="d-flex justify-content-between align-items-start">
                             <div>
                                 <h5>Christmas Carol Service</h5>
-                                <p><i class="fas fa-calendar me-2"></i>December 15, 2025</p>
+                                <p><i class="fas fa-calendar me-2"></i>August, 2025</p>
                                 <p><i class="fas fa-clock me-2"></i>7:00 PM - 8:30 PM</p>
-                                <p>A beautiful evening of Christmas carols and readings celebrating the birth of Christ.</p>
+                                <p>A beautiful moment for members to socialise and have godly fun together.</p>
                             </div>
                             <span class="badge bg-success">All Ages</span>
                         </div>
