--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         }
         
         .service-icon img {
-            width: 80px;
-            height: 80px;
+            width: 100px;
+            height: 100px;
             object-fit: cover;
             border-radius: 8px;
         }
@@ -623,7 +623,7 @@
         <!-- Hero Content -->
         <div class="container">
             <div class="hero-content">
-                <h1>FOR ALL. FOR EDINBURGH. ALWAYS.</h1>
+                <h1>FOR ALL. FOR CHRIST. ALWAYS.</h1>
                 <p>A place where faith, family, and community come together in the heart of Scotland</p>
                 <div>
                     <a href="#services" class="btn btn-custom btn-lg me-3">JOIN OUR SERVICE</a>
@@ -686,7 +686,7 @@
                         </div>
                         <h4>Sunday Morning</h4>
                         <p><strong>10:00 AM</strong></p>
-                        <p>Glorious Sunday service where true worship is observed</p>
+                        <p>Glorious Sunday service where true worship is observed</br>@church auditorium</p>
                     </div>
                  </div>
                 <div class="col-md-4">
@@ -696,7 +696,7 @@
                         </div>
                         <h4>Monday</h4>
                         <p><strong>19:00 - 20:00</strong></p>
-                        <p>Bible study (online)</p>
+                        <p>Bible study </br>(Whatsapp online)</p>
                     </div>    
                 </div>
                 <div class="col-md-4">
@@ -706,7 +706,7 @@
                         </div>
                         <h4>Wednesday</h4>
                         <p><strong>00:00 - 01:00</strong></p>
-                        <p>Night vigil conference call prayer</p>
+                        <p>Night vigil conference call prayer</br>Dial 03330154193 and follow instructions</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -716,7 +716,7 @@
                         </div>
                         <h4>Wednesday Evening</h4>
                         <p><strong>18:00 - 19:00</strong></p>
-                        <p>Mercy day service</p>
+                        <p>Mercy day service</br>@church auditorium</p>
                     </div>
                 </div>    
                 <div class="col-md-4">
@@ -726,7 +726,7 @@
                         </div>
                         <h4>Friday Evening</h4>
                         <p><strong>18:00 - 19:00</strong></p>
-                        <p>Power day service</p>
+                        <p>Power day service</br>@church auditorium</p>
                     </div>
                 </div>
             </div>
